# projects

image_processor/: CMakeLists.txt  image_processor.cpp
image_processor/Filters/: crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.cpp  filter.h  gaissian_blur.cpp  gaissian_blur.h  gray_scale.cpp  gray_scale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
image_processor/Image/: color.cpp  color.h  image.cpp  image.h
image_processor/Read_and_Write/: magic.h  read.cpp  read.h  write.cpp  write.h
search2/: search.cpp  search.h
test_tasking/: CMakeLists.txt  README.md
test_tasking/stage_1/: CMakeLists.txt  stage_1.cpp
test_tasking/stage_2/: CMakeLists.txt  stage_2.cpp
unixpath2/: unixpath.cpp  unixpath.h
